# Pragmatic-Type-Level-Design

./: .gitignore  LICENSE  Pragmatic-Type-Level-Design.cabal  README.md  package.yaml  stack.yaml
First-Edition/BookSamples/rosetta-stone/ocaml/hello/: dune-project
First-Edition/BookSamples/rosetta-stone/ocaml/hello/lib/: en.ml  en.mli  es.ml
First-Edition/BookSamples/rosetta-stone/ocaml/hello/test/: dune
First-Edition/BookSamples/rosetta-stone/rust/functional_conf_2025/: Cargo.toml  README.md
First-Edition/BookSamples/rosetta-stone/rust/functional_conf_2025/src/: main.rs
First-Edition/BookSamples/rosetta-stone/rust/functional_conf_2025/tl_str_macro/: Cargo.toml
First-Edition/functional_conf_2025/rust/tic-tac-toe-web/: Cargo.toml  README.md
First-Edition/functional_conf_2025/rust/tic-tac-toe-web/src/: main.rs
First-Edition/functional_conf_2025/rust/tic-tac-toe-web/src/master/: mod.rs
First-Edition/functional_conf_2025/rust/tic-tac-toe-web/tl_list_lib/src/: lib.rs
First-Edition/functional_conf_2025/rust/tic-tac-toe-web/tl_str_list/: Cargo.toml
First-Edition/functional_conf_2025/rust/tic-tac-toe-web/type_level/src/: lib.rs
First-Edition/juspay/flow-research/: Cargo.toml  README.md
First-Edition/juspay/flow-research/src/: common_types.rs  lib.rs  main.rs  tl_flow_edsl.rs  tl_payment_processor_edsl.rs  type_level_edsl.rs  type_level_flow_edsl.rs  value_level_edsl.rs
First-Edition/juspay/flow-research/src/api/: types.rs
First-Edition/juspay/flow-research/src/application/: dummy_logger.rs  mod.rs  services.rs
First-Edition/juspay/flow-research/src/assets/: dummy_payment_processor.rs  mod.rs  validators.rs
First-Edition/juspay/flow-research/src/assets/flow_templates/: generic_payment_create.rs  mod.rs  payment_create.rs  simple_payment_create.rs
First-Edition/juspay/flow-research/src/assets/flows/: mod.rs  normal_payment_create.rs  simple_payment_create.rs
First-Edition/juspay/flow-research/src/domain/: mod.rs  services.rs  types.rs
First-Edition/juspay/flow-research/src/value_level/: mod.rs
First-Edition/juspay/flow-research/tests/: flow_construction_test.rs  payment_create_template_method_test.rs  payment_create_test.rs  tl_payment_processor_edsl_test.rs  type_level_edsl2_test.rs  value_level_edsl_test.rs  value_level_test.rs  vl_flow_construction_test.rs  vl_flow_edsl_test.rs  vl_validation_test.rs
(+1201 files in other folders)
