[package]
name = "flow_research"
version = "0.1.0"
edition = "2021"

[dependencies]
assert-type-eq = "0.1"
tl_interface = "0.1.0"
tl_list_lib = "0.1.0"
tl_str_list = "0.1.0"
tl_str_macro = "0.1.0"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
actix-cors = "0.6.5"
actix-http = "3.6.0"
actix-multipart = "0.6.1"
actix-rt = "2.9.0"
actix-web = "4.5.1"
either = "1.9"
validator = "0.20.0"
dyn-clone = "1.0.18"
strum = "0.27.1"
strum_macros = "0.27"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",
]
