[package]
name = "web_master"
version = "0.1.0"
edition = "2021"

[dependencies]
assert-type-eq = "0.1"
type_level = { path = "./type_level" }
tl_list_lib = { path = "./tl_list_lib" }
tl_str_list = { path = "./tl_str_list" }
tl_str_macro = { path = "./tl_str_macro" }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

axum = "0.6"
tiny_http = "0.8"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",
]
